Implementazione parziale ObServer e modifiche per l'andata